--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,11 @@ jar.compress=false
 javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.spring-framework400.classpath}
+    ${libs.spring-framework400.classpath}:\
+    ${libs.commons-dbcp-1.4.classpath}:\
+    ${libs.commons-logging-1.2.classpath}:\
+    ${libs.commons-pool-1.6.classpath}:\
+    ${libs.prettyfaces-jsf2-3.3.3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
