first settings of version 1.2
updating location of jars

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-dbcp-1.4.jar=/Users/youssefsafi/Downloads/commons-dbcp-1.4/commons-dbcp-1.4.jar
+file.reference.commons-logging-1.2.jar=/Users/youssefsafi/Downloads/commons-logging-1.2/commons-logging-1.2.jar
+file.reference.commons-pool-1.6.jar=/Users/youssefsafi/Downloads/commons-pool-1.6/commons-pool-1.6.jar
+file.reference.prettyfaces-jsf2-3.3.3.jar=/Users/youssefsafi/Desktop/JEE  Jars/prettyfaces-jsf2-3.3.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -54,10 +58,10 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${libs.spring-framework400.classpath}:\
-    ${libs.commons-dbcp-1.4.classpath}:\
-    ${libs.commons-logging-1.2.classpath}:\
-    ${libs.commons-pool-1.6.classpath}:\
-    ${libs.prettyfaces-jsf2-3.3.3.classpath}
+    ${file.reference.prettyfaces-jsf2-3.3.3.jar}:\
+    ${file.reference.commons-dbcp-1.4.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-pool-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
