Admin | Gestion des inscriptions
Accepter - Refuser les inscriptions des professeurs

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,14 @@
-deploy.ant.properties.file=/Users/youssefsafi/Library/Application Support/NetBeans/8.1/config/GlassFishEE6/Properties/gfv3432376347.properties
+deploy.ant.properties.file=C:\\Users\\mkerm\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv3910414904.properties
+file.reference.commons-dbcp-1.4.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-dbcp-1.4.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-logging-1.2.jar
+file.reference.commons-pool-1.6.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-pool-1.6.jar
+file.reference.prettyfaces-jsf2-3.3.3.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\prettyfaces-jsf2-3.3.3.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/Users/youssefsafi/glassfish4/glassfish/domains/domain1
-j2ee.server.home=/Users/youssefsafi/glassfish4/glassfish
-j2ee.server.instance=[/Users/youssefsafi/glassfish4/glassfish:/Users/youssefsafi/glassfish4/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/Users/youssefsafi/glassfish4
+j2ee.server.domain=C:/Program Files/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=/Users/youssefsafi/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\mkerm\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
