--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-codec-1.10.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-codec-1.10.jar
 file.reference.commons-dbcp-1.4.jar=/Users/youssefsafi/Downloads/commons-dbcp-1.4/commons-dbcp-1.4.jar
+file.reference.commons-lang3-3.4.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-lang3-3.4.jar
 file.reference.commons-logging-1.2.jar=/Users/youssefsafi/Downloads/commons-logging-1.2/commons-logging-1.2.jar
 file.reference.commons-pool-1.6.jar=/Users/youssefsafi/Downloads/commons-pool-1.6/commons-pool-1.6.jar
 file.reference.prettyfaces-jsf2-3.3.3.jar=/Users/youssefsafi/Desktop/JEE  Jars/prettyfaces-jsf2-3.3.3.jar
@@ -62,7 +64,9 @@ javac.classpath=\
     ${file.reference.prettyfaces-jsf2-3.3.3.jar}:\
     ${file.reference.commons-dbcp-1.4.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.commons-pool-1.6.jar}
+    ${file.reference.commons-pool-1.6.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-lang3-3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
