--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,13 +38,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.commons-codec-1.10.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-codec-1.10.jar
-file.reference.commons-dbcp-1.4.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-dbcp-1.4.jar
-file.reference.commons-lang3-3.4.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-lang3-3.4.jar
-file.reference.commons-logging-1.2.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-logging-1.2.jar
-file.reference.commons-pool-1.6.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-pool-1.6.jar
-file.reference.javax.websocket-api-1.1.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\javax.websocket-api-1.1.jar
-file.reference.prettyfaces-jsf2-3.3.3.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\prettyfaces-jsf2-3.3.3.jar
+file.reference.commons-codec-1.10.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-codec-1.10.jar
+file.reference.commons-dbcp-1.4.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-dbcp-1.4.jar
+file.reference.commons-lang3-3.4.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-lang3-3.4.jar
+file.reference.commons-logging-1.2.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-logging-1.2.jar
+file.reference.commons-pool-1.6.jar=/Users/youssefsafi/Desktop/JEE  Jars/commons-pool-1.6.jar
+file.reference.prettyfaces-jsf2-3.3.3.jar=/Users/youssefsafi/Desktop/JEE  Jars/prettyfaces-jsf2-3.3.3.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -67,8 +66,7 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.4.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-pool-1.6.jar}:\
-    ${file.reference.prettyfaces-jsf2-3.3.3.jar}:\
-    ${file.reference.javax.websocket-api-1.1.jar}
+    ${file.reference.prettyfaces-jsf2-3.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
