--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,6 @@ file.reference.commons-dbcp-1.4.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHu
 file.reference.commons-lang3-3.4.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-lang3-3.4.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-logging-1.2.jar
 file.reference.commons-pool-1.6.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\commons-pool-1.6.jar
-file.reference.javax.websocket-api-1.1.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\javax.websocket-api-1.1.jar
 file.reference.prettyfaces-jsf2-3.3.3.jar=C:\\Users\\mkerm\\OneDrive\\Documents\\GitHub\\jars\\prettyfaces-jsf2-3.3.3.jar
 includes=**
 j2ee.compile.on.save=true
@@ -67,8 +66,7 @@ javac.classpath=\
     ${file.reference.commons-lang3-3.4.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-pool-1.6.jar}:\
-    ${file.reference.prettyfaces-jsf2-3.3.3.jar}:\
-    ${file.reference.javax.websocket-api-1.1.jar}
+    ${file.reference.prettyfaces-jsf2-3.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
